--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
   "devDependencies": {
     "nodemon": "^2.0.20"
   },
+  "scripts": {
+  "start": "node app.js",
+  // other scripts...
+},
   "engines":{
     "node": "21.4.0"
   }
