--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "nodemon": "^2.0.20"
   },
   "scripts": {
-  "start": "npm start"
+  "start": "node app.js"
 },
   "engines":{
     "node": "21.4.0"
